Call stock service from details service
