# BookInfo.Details/handlers/get.go
@@ -1,9 +1,13 @@
 package handlers
 
 import (
+	"encoding/json"
+	"io/ioutil"
 	"net/http"
+	"time"
 
 	"bookinfo/details/data"
+	"bookinfo/details/dto"
 )
 
 // swagger:route GET /Ratings/{id} Ratings listSingleRating
@@ -26,6 +30,17 @@ func (p *APIContext) ListSingle(rw http.ResponseWriter, r *http.Request) {
 		data.ToJSON(&GenericError{Message: err.Error()}, rw)
 		return
 	}
+	// Call stocks service
+	netClient := &http.Client{Timeout: time.Second * 10}
+	stockresponse, err := netClient.Get("http://localhost:5114/stocks/1")
+	stockInfo := &dto.StockInfo{
+		CurrentStock: 0,
+	}
+	if err == nil {
+		buf, _ := ioutil.ReadAll(stockresponse.Body)
+		json.Unmarshal(buf, &stockInfo)
+	}
+	detail.CurrentStock = stockInfo.CurrentStock
 	err = data.ToJSON(detail, rw)
 	if err != nil {
 		// we should never be here but log the error just incase
